Generating raport to xml

--- a/przychodnia/przychodnia/MainWindow.resx
+++ b/przychodnia/przychodnia/MainWindow.resx
@@ -123,13 +123,16 @@
   <metadata name="pacjenciTableAdapter.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>177, 20</value>
   </metadata>
-  <metadata name="wizytyTableAdapter.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>342, 21</value>
-  </metadata>
   <metadata name="pacjenciBindingSource.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>500, 21</value>
   </metadata>
   <metadata name="pacjenciDeklaracjeBindingSource.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>678, 21</value>
+  </metadata>
+  <metadata name="lekarzeTableAdapter.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>909, 21</value>
+  </metadata>
+  <metadata name="deklaracjeTableAdapter.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>1072, 21</value>
   </metadata>
 </root>
